--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta name="copyright" content="Guido sabato" />
     <title>Casa Museo Ernesto Sabato. Visitas guiadas por sus nietos, reservar acá</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css" rel='stylesheet'>
+    <link href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css" rel="stylesheet">
     <!-- Google tag (gtag.js) -->
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-LE6VKZR6N8"></script>
@@ -246,6 +246,8 @@
     </div>
     
     <footer>
+        <div class="footer__text">
+        
         <h2>Visitas Guiadas por Guido y Luciana Sabato, nietos del escritor.</h2>
         <p>En las visitas hablamos de la vida del escritor, su paso por el comunismo, por la física y el laboratorio
             Madam
@@ -259,7 +261,7 @@
             sus exhibiciones con Eduardo Falu y Mercedes Sosa, en el Romance de la muerte de Juan Lavalle.
             Para reservar escribir al 11361 49927</p>
 
-
+        </div>
     </footer>
 
     <script src="script.js" type="text/javascript"></script>
