--- a/360.html
+++ b/360.html
@@ -49,7 +49,7 @@
             <a class="link-item" href="contacto.html">Contacto</a>
         </div>
     </nav>
-    <button id="button-menu" class="button-menu">
+    <button id="button-menu" aria-label="button-menu" class="button-menu">
         <span></span>
         <span></span>
         <span></span>
@@ -69,7 +69,7 @@
                         </div>
                         <div class="telefono"> <img src="img/telefono.webp" alt="telefono"></div>
                         <div class="botonwassap">
-                            <img class="btn-whatsapp" src="https://clientes.dongee.com/whatsapp.png" width="64"
+                            <img class="btn-whatsapp" src="img/whatsapp.webp" width="64"
                                 height="64" alt="Whatsapp"
                                 onclick="window.location.href='https://wa.me/5491136149927?text=Hola!%20Estoy%20interesado%20en%20tu%20servicio'">
                         </div>
