--- a/fotos.html
+++ b/fotos.html
@@ -48,7 +48,7 @@
           <a class="link-item" href="contacto.html">Contacto</a>
         </div>
       </nav>
-      <button id="button-menu" class="button-menu">
+      <button id="button-menu" aria-label="button-menu" class="button-menu">
         <span></span>
         <span></span>
         <span></span>
@@ -67,7 +67,7 @@
                         </div>
                         <div class="telefono"> <img src="img/telefono.jpg" alt="telefono" ></div>
                         <div class="botonwassap">
-                            <img class="btn-whatsapp" src="https://clientes.dongee.com/whatsapp.png" width="64"
+                            <img class="btn-whatsapp" src="img/whatsapp.webp" width="64"
                                 height="64" alt="Whatsapp"
                                 onclick="window.location.href='https://wa.me/5491136149927?text=Hola!%20Estoy%20interesado%20en%20tu%20servicio'">
                         </div>
@@ -111,7 +111,7 @@
         </ul>
     </nav>
     <div class="titulo"> <h1>La Casa Museo de Ernesto Sabato</h1></div>
-    <div class="paginafotos">
+    <ul class="paginafotos">
 
     <li><h2>Su anteojos</h2><img src="img/ESCRITORIOTATA.webp"
          alt="escritorio">
@@ -152,7 +152,7 @@
     <li> <h2>Los eventos de la Casa</h2><img src="img/CASAILUMINADA.webp" alt="casa iluminada">
     <h3>Complementando la mirada hacia atrás en el pasado, la casa abre sus puertas y en los patios y jardines, invita a artistas emergentes y consagrados, a mostrar su arte y su mirada del presente y futuro.</h3></li>
 
- </div>
+    </ul>
 
 
 
