--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
             <a class="link-item" href="contacto.html">Contacto</a>
         </div>
     </nav>
-    <button id="button-menu" class="button-menu" name="menu">
+    <button id="button-menu" aria-label="button-menu" class="button-menu">
+        
         <span></span>
         <span></span>
         <span></span>
@@ -69,7 +70,7 @@
                         </div>
                         <div class="telefono"> <img src="img/telefono.webp" alt="telefono"></div>
                         <div class="botonwassap">
-                            <img class="btn-whatsapp" src="https://clientes.dongee.com/whatsapp.png" width="64"
+                            <img class="btn-whatsapp" src="img/whatsapp.webp" width="64"
                                 height="64" alt="Whatsapp"
                                 onclick="window.location.href='https://wa.me/5491136149927?text=Hola!%20Estoy%20interesado%20en%20tu%20servicio'">
                         </div>
@@ -123,7 +124,7 @@
             class="icon icon-whatsapp" target="_blank"></a>
     </div>
 
-    <div class="contenedor-cabecera">
+    <ul class="contenedor-cabecera">
         <li> <img class="sabato" src="img/sabato-santoslugares.webp" alt="SABATO ESTACION santos lugares"></li>
         <li class="firma">
             <img src="img/Firma-sabato.webp" alt="firmasabato">
@@ -132,7 +133,7 @@
         <li> <img src="img/casailuminada.webp" alt="sabato3135"></li>
 
 
-    </div>
+    </ul>
     <h2 class="nietos">Un viaje a través del tiempo y la vida del escritor, guiado por sus nietos, todos los sábados a
         las 15 horas.</h2>
 
