--- a/contacto.html
+++ b/contacto.html
@@ -96,7 +96,7 @@
         </ul>
         </li>
         <li>
-            <a href="fotos.html">Media
+            <a href="#">Media
                 <ul class="submenu">
                     <li><a href="videos.html">Videos</a> </li>
                     <li><a href="fotos.html">Fotos</a></li>
