--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
         <div class="fb-container" id="fb-scroll">
 
             
-        <div class="fb-page" data-href="https://www.facebook.com/Casadesabato/" data-tabs="timeline" data-width="500" data-height="500" data-small-header="false" data-adapt-container-width="false" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/Casadesabato/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/Casadesabato/">La casa de Ernesto Sabato.</a></blockquote></div>
+        <div class="fb-page" data-href="https://www.facebook.com/Casadesabato/" data-tabs="timeline" data-width="500" data-height="500" data-small-header="false" data-adapt-container-width="false" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/Casadesabato/" loading="lazy" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/Casadesabato/">La casa de Ernesto Sabato.</a></blockquote></div>
         </div>
         <div class="footer__text">
         
